--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,144 @@
+:root{
+--color-green: #3e5f40;
+--color-red-ligth: #eb1c0a;
+--color-orange:#fd883f;
+--color-background:rgb(241, 245, 237);
+--color-white: #ffffff;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--color-background);
+  font-family: 'Poppins', sans-serif;
+}
+
+header {
+  background-color: var(--color-green);
+  padding: 2rem 0 9rem;
+  text-align: center;
+}
+
+header h1 {
+  color: var(--color-white);
+  font-weight: 200;
+}
+
+span {
+  color: var(--color-orange);
+}
+
+h2 {
+    margin-top: 3rem;
+    margin-bottom: 0.8rem;
+    color:var(--color-green);
+    font-weight: normal;
+}
+
+.container {
+    width: min(90vw, 800px);
+    margin: auto;
+}
+
+.footer{
+    text-align: center;
+}
+
+#balance {
+    margin-top: -9rem;
+}
+
+#balance h2 {
+   color: var(--color-white);
+}
+
+.card {
+    background: var(--color-white);
+    padding: 1.5rem 2rem;
+    border-radius: 0.25rem;
+    margin-bottom: 2rem;
+}
+
+.card h3 {
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.card p {
+    font-size: 2rem;
+    font-weight: normal;
+    margin-top: 1rem;    
+}
+
+.card.total {
+    background: var(--color-orange);
+}
+
+.card.entrada {
+    color: var(--color-green);
+}
+
+.card.saida {
+    color: var(--color-red-ligth);
+}
+
+#data-table {
+   width: 100%; 
+   border-spacing: 0 0.5rem;
+   color: var(--color-green);
+}
+
+table th{
+    background: var(--color-white);
+    opacity: 0.6;
+    color: var(--color-green);
+    padding: 1rem 2rem;
+    text-align: left;
+}
+
+table td {
+background: var(--color-white);
+padding: 1rem 2rem;
+font-weight: normal;
+}
+
+table tbody tr {
+opacity: 0.7;
+}
+
+table tbody tr:hover {
+opacity: 1;
+}
+
+table thead tr th:first-child,
+table tbody tr td:first-child {
+border-radius: 0.25rem 0 0 0.25rem;
+}
+
+td.description {
+color: var(--color-green);
+}
+
+.income {
+color: var(--color-green);
+}
+
+.expense {
+color: var(--color-red-ligth);
+}
+
+.date {
+   color: var(--color-green);
+}
+
+footer {
+    width: 100%;    
+    color: var(--color-green);
+    padding: 1rem;
+    margin-top: 2rem;
+    opacity: 0.7;
 }
